@@ -1,3 +1,8 @@
+2014-12-10 Albert Chu <chu11@llnl.gov>
+
+	* ipmi-config/ipmi-config-category-pef-alert-policy-table.c (_set_alert_policy_table):
+	Use convenience function ipmi_config_find_section appropriately.
+	
 2014-12-09 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-config/ipmi-config-category-core-lan-conf-section.c: Fix
